v1.1.0/modules/schema/pages/class/GovGAST1.adoc
= `GovGAST1`
:toclevels: 4


+++Modified single shaft gas turbine.+++


[cols="h,3",width=65%]
|===
| Type
| Class

| URI
| `cim:GovGAST1`


| CIM standard (perspective)
| IEC61970 (Grid)



|===

== Class hierarchy
* xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
** xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]
*** xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]
**** *`GovGAST1`*


== Slots




[cols="1,1,2,1",width=100%]
|===
| Name | Type | Description | Inherited from

| <<a,`a`>>
//| [[slots_table.a]]<<a,`a`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Turbine power time constant numerator scale factor (<i>a</i>).  Typical value = 0,8.+++
| _n/a_

| <<b,`b`>>
//| [[slots_table.b]]<<b,`b`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Turbine power time constant denominator scale factor (<i>b</i>) (&gt;0).  Typical value = 1.+++
| _n/a_

| <<db1,`db1`>>
//| [[slots_table.db1]]<<db1,`db1`>>
| 0..1 +
xref::class/Frequency.adoc[`Frequency`]
| +++Intentional dead-band width (<i>db1</i>).  Unit = Hz.  Typical value = 0.+++
| _n/a_

| <<db2,`db2`>>
//| [[slots_table.db2]]<<db2,`db2`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Unintentional dead-band (<i>db2</i>).  Unit = MW.  Typical value = 0.+++
| _n/a_

| <<eps,`eps`>>
//| [[slots_table.eps]]<<eps,`eps`>>
| 0..1 +
xref::class/Frequency.adoc[`Frequency`]
| +++Intentional db hysteresis (<i>eps</i>).  Unit = Hz.  Typical value = 0.+++
| _n/a_

| <<fidle,`fidle`>>
//| [[slots_table.fidle]]<<fidle,`fidle`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Fuel flow at zero power output (<i>Fidle</i>).  Typical value = 0,18.+++
| _n/a_

| <<gv1,`gv1`>>
//| [[slots_table.gv1]]<<gv1,`gv1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 1, PU gv (<i>Gv1</i>).  Typical value = 0.+++
| _n/a_

| <<gv2,`gv2`>>
//| [[slots_table.gv2]]<<gv2,`gv2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 2,PU gv (<i>Gv2</i>).  Typical value = 0.+++
| _n/a_

| <<gv3,`gv3`>>
//| [[slots_table.gv3]]<<gv3,`gv3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 3, PU gv (<i>Gv3</i>).  Typical value = 0.+++
| _n/a_

| <<gv4,`gv4`>>
//| [[slots_table.gv4]]<<gv4,`gv4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 4, PU gv (<i>Gv4</i>).  Typical value = 0.+++
| _n/a_

| <<gv5,`gv5`>>
//| [[slots_table.gv5]]<<gv5,`gv5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 5, PU gv (<i>Gv5</i>).  Typical value = 0.+++
| _n/a_

| <<gv6,`gv6`>>
//| [[slots_table.gv6]]<<gv6,`gv6`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 6, PU gv (<i>Gv6</i>).  Typical value = 0.+++
| _n/a_

| <<ka,`ka`>>
//| [[slots_table.ka]]<<ka,`ka`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Governor gain (<i>Ka</i>).  Typical value = 0.+++
| _n/a_

| <<kt,`kt`>>
//| [[slots_table.kt]]<<kt,`kt`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Temperature limiter gain (<i>Kt</i>).  Typical value = 3.+++
| _n/a_

| <<lmax,`lmax`>>
//| [[slots_table.lmax]]<<lmax,`lmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Ambient temperature load limit (<i>Lmax</i>).  <i>Lmax</i> is the turbine power output corresponding to the limiting exhaust...+++
| _n/a_

| <<loadinc,`loadinc`>>
//| [[slots_table.loadinc]]<<loadinc,`loadinc`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Valve position change allowed at fast rate (<i>Loadinc</i>).  Typical value = 0,05.+++
| _n/a_

| <<ltrate,`ltrate`>>
//| [[slots_table.ltrate]]<<ltrate,`ltrate`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum long term fuel valve opening rate (<i>Ltrate</i>).  Typical value = 0,02.+++
| _n/a_

| <<mwbase,`mwbase`>>
//| [[slots_table.mwbase]]<<mwbase,`mwbase`>>
| 0..1 +
xref::class/ActivePower.adoc[`ActivePower`]
| +++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++
| _n/a_

| <<pgv1,`pgv1`>>
//| [[slots_table.pgv1]]<<pgv1,`pgv1`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 1, PU power (<i>Pgv1</i>).  Typical value = 0.+++
| _n/a_

| <<pgv2,`pgv2`>>
//| [[slots_table.pgv2]]<<pgv2,`pgv2`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 2, PU power (<i>Pgv2</i>).  Typical value = 0.+++
| _n/a_

| <<pgv3,`pgv3`>>
//| [[slots_table.pgv3]]<<pgv3,`pgv3`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 3, PU power (<i>Pgv3</i>).  Typical value = 0.+++
| _n/a_

| <<pgv4,`pgv4`>>
//| [[slots_table.pgv4]]<<pgv4,`pgv4`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 4, PU power (<i>Pgv4</i>).  Typical value = 0.+++
| _n/a_

| <<pgv5,`pgv5`>>
//| [[slots_table.pgv5]]<<pgv5,`pgv5`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 5, PU power (<i>Pgv5</i>).  Typical value = 0.+++
| _n/a_

| <<pgv6,`pgv6`>>
//| [[slots_table.pgv6]]<<pgv6,`pgv6`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Nonlinear gain point 6, PU power (<i>Pgv6</i>).  Typical value = 0.+++
| _n/a_

| <<r,`r`>>
//| [[slots_table.r]]<<r,`r`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Permanent droop (<i>R</i>) (&gt;0).  Typical value = 0,04.+++
| _n/a_

| <<rmax,`rmax`>>
//| [[slots_table.rmax]]<<rmax,`rmax`>>
| 0..1 +
https://w3id.org/linkml/Float[`float`]
| +++Maximum fuel valve opening rate (<i>Rmax</i>).  Unit = PU / s.  Typical value = 1.+++
| _n/a_

| <<t1,`t1`>>
//| [[slots_table.t1]]<<t1,`t1`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Governor mechanism time constant (<i>T1</i>) (&gt;= 0).  <i>T1</i> represents the natural valve positioning time constant of...+++
| _n/a_

| <<t2,`t2`>>
//| [[slots_table.t2]]<<t2,`t2`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Turbine power time constant (<i>T2</i>) (&gt;= 0). <i>T2</i> represents delay due to internal energy storage of the gas...+++
| _n/a_

| <<t3,`t3`>>
//| [[slots_table.t3]]<<t3,`t3`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Turbine exhaust temperature time constant (<i>T3</i>) (&gt;= 0).  <i>T3</i> represents delay in the exhaust temperature and...+++
| _n/a_

| <<t4,`t4`>>
//| [[slots_table.t4]]<<t4,`t4`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Governor lead time constant (<i>T4</i>) (&gt;= 0).  Typical value = 0.+++
| _n/a_

| <<t5,`t5`>>
//| [[slots_table.t5]]<<t5,`t5`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Governor lag time constant (<i>T5</i>) (&gt;= 0).  If = 0, entire gain and lead-lag block is bypassed.  Typical value = 0.+++
| _n/a_

| <<tltr,`tltr`>>
//| [[slots_table.tltr]]<<tltr,`tltr`>>
| 0..1 +
xref::class/Seconds.adoc[`Seconds`]
| +++Valve position averaging time constant (<i>Tltr</i>) (&gt;= 0).  Typical value = 10.+++
| _n/a_

| <<vmax,`vmax`>>
//| [[slots_table.vmax]]<<vmax,`vmax`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Maximum turbine power, PU of MWbase (<i>Vmax</i>) (&gt; GovGAST1.vmin).  Typical value = 1.+++
| _n/a_

| <<vmin,`vmin`>>
//| [[slots_table.vmin]]<<vmin,`vmin`>>
| 0..1 +
xref::class/PU.adoc[`PU`]
| +++Minimum turbine power, PU of MWbase (<i>Vmin</i>) (&lt; GovGAST1.vmax).  Typical value = 0.+++
| _n/a_

| <<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
//| [[slots_table.AsynchronousMachineDynamics]]<<AsynchronousMachineDynamics,`AsynchronousMachineDynamics`>>
| 0..1 +
xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]
| +++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
//| [[slots_table.SynchronousMachineDynamics]]<<SynchronousMachineDynamics,`SynchronousMachineDynamics`>>
| 0..1 +
xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]
| +++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an...+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
//| [[slots_table.TurbineLoadControllerDynamics]]<<TurbineLoadControllerDynamics,`TurbineLoadControllerDynamics`>>
| 0..1 +
xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]
| +++Turbine load controller providing input to this turbine-governor.+++
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]

| <<enabled,`enabled`>>
//| [[slots_table.enabled]]<<enabled,`enabled`>>
| 0..1 +
https://w3id.org/linkml/Boolean[`boolean`]
| +++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]

| <<DiagramObjects,`DiagramObjects`>>
//| [[slots_table.DiagramObjects]]<<DiagramObjects,`DiagramObjects`>>
| 0..* +
xref::class/DiagramObject.adoc[`DiagramObject`]
| +++The diagram objects that are associated with the domain object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<InstanceSet,`InstanceSet`>>
//| [[slots_table.InstanceSet]]<<InstanceSet,`InstanceSet`>>
| 1 +
xref::class/InstanceSet.adoc[`InstanceSet`]
| +++Dataset containing the data objects.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<Names,`Names`>>
//| [[slots_table.Names]]<<Names,`Names`>>
| 0..* +
xref::class/Name.adoc[`Name`]
| +++All names of this identified object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
//| [[slots_table.PropertiesCIMDataObject]]<<PropertiesCIMDataObject,`PropertiesCIMDataObject`>>
| 0..1 +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++The single CIM data object in the appropriate dataset context.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<TargetingCIMDataObject,`TargetingCIMDataObject`>>
//| [[slots_table.TargetingCIMDataObject]]<<TargetingCIMDataObject,`TargetingCIMDataObject`>>
| 0..* +
xref::class/ChangeSetMember.adoc[`ChangeSetMember`]
| +++Data objects registered.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<aliasName,`aliasName`>>
//| [[slots_table.aliasName]]<<aliasName,`aliasName`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<description,`description`>>
//| [[slots_table.description]]<<description,`description`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<mRID,`mRID`>>
//| [[slots_table.mRID]]<<mRID,`mRID`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is...+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]

| <<name,`name`>>
//| [[slots_table.name]]<<name,`name`>>
| 0..1 +
https://w3id.org/linkml/String[`string`]
| +++The name is any free human readable and possibly non unique text naming the object.+++
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]
|===

'''


//[discrete]
[#a]
=== `a`
+++Turbine power time constant numerator scale factor (<i>a</i>).  Typical value = 0,8.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.a`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.a,&#10548;>>
--
////


//[discrete]
[#aliasName]
=== `aliasName`
+++The aliasName is free text human readable name of the object alternative to IdentifiedObject.name. It may be non unique and may not correlate to a naming hierarchy.
The attribute aliasName is retained because of backwards compatibility between CIM relases. It is however recommended to replace aliasName with the Name class as aliasName is planned for retirement at a future time.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.aliasName`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.aliasName,&#10548;>>
--
////


//[discrete]
[#AsynchronousMachineDynamics]
=== `AsynchronousMachineDynamics`
+++Asynchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.AsynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/AsynchronousMachineDynamics.adoc[`AsynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.AsynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#b]
=== `b`
+++Turbine power time constant denominator scale factor (<i>b</i>) (&gt;0).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.b`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.b,&#10548;>>
--
////


//[discrete]
[#db1]
=== `db1`
+++Intentional dead-band width (<i>db1</i>).  Unit = Hz.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.db1`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

////
[.text-left]
--
<<slots_table.db1,&#10548;>>
--
////


//[discrete]
[#db2]
=== `db2`
+++Unintentional dead-band (<i>db2</i>).  Unit = MW.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.db2`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.db2,&#10548;>>
--
////


//[discrete]
[#description]
=== `description`
+++The description is a free human readable text describing or naming the object. It may be non unique and may not correlate to a naming hierarchy.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.description`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.description,&#10548;>>
--
////


//[discrete]
[#DiagramObjects]
=== `DiagramObjects`
+++The diagram objects that are associated with the domain object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.DiagramObjects`
| Cardinality
| 0..*
| Type
| xref::class/DiagramObject.adoc[`DiagramObject`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.DiagramObjects,&#10548;>>
--
////


//[discrete]
[#enabled]
=== `enabled`
+++Function block used indicator.
true = use of function block is enabled
false = use of function block is disabled.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:DynamicsFunctionBlock.enabled`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Boolean[`boolean`]

| Inherited from
| xref::class/DynamicsFunctionBlock.adoc[`DynamicsFunctionBlock`]


|===

////
[.text-left]
--
<<slots_table.enabled,&#10548;>>
--
////


//[discrete]
[#eps]
=== `eps`
+++Intentional db hysteresis (<i>eps</i>).  Unit = Hz.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.eps`
| Cardinality
| 0..1
| Type
| xref::class/Frequency.adoc[`Frequency`]


|===

////
[.text-left]
--
<<slots_table.eps,&#10548;>>
--
////


//[discrete]
[#fidle]
=== `fidle`
+++Fuel flow at zero power output (<i>Fidle</i>).  Typical value = 0,18.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.fidle`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.fidle,&#10548;>>
--
////


//[discrete]
[#gv1]
=== `gv1`
+++Nonlinear gain point 1, PU gv (<i>Gv1</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.gv1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv1,&#10548;>>
--
////


//[discrete]
[#gv2]
=== `gv2`
+++Nonlinear gain point 2,PU gv (<i>Gv2</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.gv2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv2,&#10548;>>
--
////


//[discrete]
[#gv3]
=== `gv3`
+++Nonlinear gain point 3, PU gv (<i>Gv3</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.gv3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv3,&#10548;>>
--
////


//[discrete]
[#gv4]
=== `gv4`
+++Nonlinear gain point 4, PU gv (<i>Gv4</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.gv4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv4,&#10548;>>
--
////


//[discrete]
[#gv5]
=== `gv5`
+++Nonlinear gain point 5, PU gv (<i>Gv5</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.gv5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv5,&#10548;>>
--
////


//[discrete]
[#gv6]
=== `gv6`
+++Nonlinear gain point 6, PU gv (<i>Gv6</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.gv6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.gv6,&#10548;>>
--
////


//[discrete]
[#InstanceSet]
=== `InstanceSet`
+++Dataset containing the data objects.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.InstanceSet`
| Cardinality
| 1
| Type
| xref::class/InstanceSet.adoc[`InstanceSet`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.InstanceSet,&#10548;>>
--
////


//[discrete]
[#ka]
=== `ka`
+++Governor gain (<i>Ka</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.ka`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.ka,&#10548;>>
--
////


//[discrete]
[#kt]
=== `kt`
+++Temperature limiter gain (<i>Kt</i>).  Typical value = 3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.kt`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.kt,&#10548;>>
--
////


//[discrete]
[#lmax]
=== `lmax`
+++Ambient temperature load limit (<i>Lmax</i>).  <i>Lmax</i> is the turbine power output corresponding to the limiting exhaust gas temperature.  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.lmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.lmax,&#10548;>>
--
////


//[discrete]
[#loadinc]
=== `loadinc`
+++Valve position change allowed at fast rate (<i>Loadinc</i>).  Typical value = 0,05.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.loadinc`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.loadinc,&#10548;>>
--
////


//[discrete]
[#ltrate]
=== `ltrate`
+++Maximum long term fuel valve opening rate (<i>Ltrate</i>).  Typical value = 0,02.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.ltrate`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.ltrate,&#10548;>>
--
////


//[discrete]
[#mRID]
=== `mRID`
+++Master resource identifier issued by a model authority. The mRID is unique within an exchange context. Global uniqueness is easily achieved by using a UUID, as specified in RFC 4122, for the mRID. The use of UUID is strongly recommended.
For CIMXML data files in RDF syntax conforming to IEC 61970-552, the mRID is mapped to rdf:ID or rdf:about attributes that identify CIM object elements.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.mRID`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.mRID,&#10548;>>
--
////


//[discrete]
[#mwbase]
=== `mwbase`
+++Base for power values (<i>MWbase</i>) (&gt; 0).  Unit = MW.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.mwbase`
| Cardinality
| 0..1
| Type
| xref::class/ActivePower.adoc[`ActivePower`]


|===

////
[.text-left]
--
<<slots_table.mwbase,&#10548;>>
--
////


//[discrete]
[#name]
=== `name`
+++The name is any free human readable and possibly non unique text naming the object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.name`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/String[`string`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.name,&#10548;>>
--
////


//[discrete]
[#Names]
=== `Names`
+++All names of this identified object.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.Names`
| Cardinality
| 0..*
| Type
| xref::class/Name.adoc[`Name`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.Names,&#10548;>>
--
////


//[discrete]
[#pgv1]
=== `pgv1`
+++Nonlinear gain point 1, PU power (<i>Pgv1</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.pgv1`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv1,&#10548;>>
--
////


//[discrete]
[#pgv2]
=== `pgv2`
+++Nonlinear gain point 2, PU power (<i>Pgv2</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.pgv2`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv2,&#10548;>>
--
////


//[discrete]
[#pgv3]
=== `pgv3`
+++Nonlinear gain point 3, PU power (<i>Pgv3</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.pgv3`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv3,&#10548;>>
--
////


//[discrete]
[#pgv4]
=== `pgv4`
+++Nonlinear gain point 4, PU power (<i>Pgv4</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.pgv4`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv4,&#10548;>>
--
////


//[discrete]
[#pgv5]
=== `pgv5`
+++Nonlinear gain point 5, PU power (<i>Pgv5</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.pgv5`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv5,&#10548;>>
--
////


//[discrete]
[#pgv6]
=== `pgv6`
+++Nonlinear gain point 6, PU power (<i>Pgv6</i>).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.pgv6`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.pgv6,&#10548;>>
--
////


//[discrete]
[#PropertiesCIMDataObject]
=== `PropertiesCIMDataObject`
+++The single CIM data object in the appropriate dataset context.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.PropertiesCIMDataObject`
| Cardinality
| 0..1
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.PropertiesCIMDataObject,&#10548;>>
--
////


//[discrete]
[#r]
=== `r`
+++Permanent droop (<i>R</i>) (&gt;0).  Typical value = 0,04.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.r`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.r,&#10548;>>
--
////


//[discrete]
[#rmax]
=== `rmax`
+++Maximum fuel valve opening rate (<i>Rmax</i>).  Unit = PU / s.  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.rmax`
| Cardinality
| 0..1
| Type
| https://w3id.org/linkml/Float[`float`]


|===

////
[.text-left]
--
<<slots_table.rmax,&#10548;>>
--
////


//[discrete]
[#SynchronousMachineDynamics]
=== `SynchronousMachineDynamics`
+++Synchronous machine model with which this turbine-governor model is associated. TurbineGovernorDynamics shall have either an association to SynchronousMachineDynamics or to AsynchronousMachineDynamics.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.SynchronousMachineDynamics`
| Cardinality
| 0..1
| Type
| xref::class/SynchronousMachineDynamics.adoc[`SynchronousMachineDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.SynchronousMachineDynamics,&#10548;>>
--
////


//[discrete]
[#t1]
=== `t1`
+++Governor mechanism time constant (<i>T1</i>) (&gt;= 0).  <i>T1</i> represents the natural valve positioning time constant of the governor for small disturbances, as seen when rate limiting is not in effect.  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.t1`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t1,&#10548;>>
--
////


//[discrete]
[#t2]
=== `t2`
+++Turbine power time constant (<i>T2</i>) (&gt;= 0). <i>T2</i> represents delay due to internal energy storage of the gas turbine engine. <i>T2</i> can be used to give a rough approximation to the delay associated with acceleration of the compressor spool of a multi-shaft engine, or with the compressibility of gas in the plenum of the free power turbine of an aero-derivative unit, for example.  Typical value = 0,5.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.t2`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t2,&#10548;>>
--
////


//[discrete]
[#t3]
=== `t3`
+++Turbine exhaust temperature time constant (<i>T3</i>) (&gt;= 0).  <i>T3</i> represents delay in the exhaust temperature and load limiting system. Typical value = 3.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.t3`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t3,&#10548;>>
--
////


//[discrete]
[#t4]
=== `t4`
+++Governor lead time constant (<i>T4</i>) (&gt;= 0).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.t4`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t4,&#10548;>>
--
////


//[discrete]
[#t5]
=== `t5`
+++Governor lag time constant (<i>T5</i>) (&gt;= 0).  If = 0, entire gain and lead-lag block is bypassed.  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.t5`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.t5,&#10548;>>
--
////


//[discrete]
[#TargetingCIMDataObject]
=== `TargetingCIMDataObject`
+++Data objects registered.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:IdentifiedObject.TargetingCIMDataObject`
| Cardinality
| 0..*
| Type
| xref::class/ChangeSetMember.adoc[`ChangeSetMember`]

| Inherited from
| xref::class/IdentifiedObject.adoc[`IdentifiedObject`]


|===

////
[.text-left]
--
<<slots_table.TargetingCIMDataObject,&#10548;>>
--
////


//[discrete]
[#tltr]
=== `tltr`
+++Valve position averaging time constant (<i>Tltr</i>) (&gt;= 0).  Typical value = 10.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.tltr`
| Cardinality
| 0..1
| Type
| xref::class/Seconds.adoc[`Seconds`]


|===

////
[.text-left]
--
<<slots_table.tltr,&#10548;>>
--
////


//[discrete]
[#TurbineLoadControllerDynamics]
=== `TurbineLoadControllerDynamics`
+++Turbine load controller providing input to this turbine-governor.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:TurbineGovernorDynamics.TurbineLoadControllerDynamics`
| Cardinality
| 0..1
| Type
| xref::class/TurbineLoadControllerDynamics.adoc[`TurbineLoadControllerDynamics`]

| Inherited from
| xref::class/TurbineGovernorDynamics.adoc[`TurbineGovernorDynamics`]


|===

////
[.text-left]
--
<<slots_table.TurbineLoadControllerDynamics,&#10548;>>
--
////


//[discrete]
[#vmax]
=== `vmax`
+++Maximum turbine power, PU of MWbase (<i>Vmax</i>) (&gt; GovGAST1.vmin).  Typical value = 1.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.vmax`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vmax,&#10548;>>
--
////


//[discrete]
[#vmin]
=== `vmin`
+++Minimum turbine power, PU of MWbase (<i>Vmin</i>) (&lt; GovGAST1.vmax).  Typical value = 0.+++


[cols="h,4",width=65%]
|===
| URI
| `cim:GovGAST1.vmin`
| Cardinality
| 0..1
| Type
| xref::class/PU.adoc[`PU`]


|===

////
[.text-left]
--
<<slots_table.vmin,&#10548;>>
--
////





== Used by


This class is not used by any other classes as the range of a slot.
